[tool.poetry]
name = "tensorflow-fcc"
version = "0.1.0"
description = ""
authors = ["Yousinator <y.omusabeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.3"
pyzmq = "^25.1.2"
triton = "^2.2.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
